# robust-binary-search

./: .gitignore  Cargo.toml  README.md  debug-tuner-split  flakiness_experiment.plt  flakiness_split_tuner.plt  flakiness_split_tuner2.plt  init-git-hooks  test-commit  tuner.plt
.git-hooks/: pre-commit
robust-binary-search/: Cargo.toml  README.md  flakiness_experiment.plt  summarize-benchmark
robust-binary-search/flakiness_tuner/: inversion_ratio_versus_flakiness.plt  recovered_flakiness.plt
robust-binary-search/src/: benchmark.rs  compressed_dag_flakiness_tracker.rs  dag.rs  flakiness_experiment.rs  flakiness_split_tuner.rs  flakiness_split_tuner2.rs  flakiness_tracker.rs  flakiness_tuner.rs  lib.rs  optimizer.rs  range_map.rs  range_map2.rs  range_map3.rs  range_map4.rs  range_map5.rs  range_map6.rs  range_map_benchmark.rs  tuner.rs  tuner_split.rs
robust-git-bisect/: Cargo.toml  README.md
robust-git-bisect/src/: main.rs
