# Copyright 2020 Google LLC
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     https://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "robust-binary-search"
version = "0.1.0"
authors = ["Adam Crume <acrume@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Robust Binary Search provides a binary search implementation which is robust against errors during the search."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
im-rc = "15.0.0"
lazy_static = {version = "1.4.0", optional = true}
log = "0.4"
rand = {version = "0.7.3", optional = true}
regex = {version = "1.3.9", optional = true}
simplelog = "0.8.0"

[features]
tuner = ["rand"]
benchmark = ["regex", "lazy_static", "rand"]

[[bin]]
name = "tuner"
path = "src/tuner.rs"
required-features = ["tuner"]

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"
required-features = ["benchmark"]
