# Copyright 2020 Google LLC
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     https://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "robust-binary-search"
version = "0.1.1"
authors = ["Adam Crume <acrume@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Robust Binary Search provides a binary search implementation which is robust against errors during the search."
repository = "https://github.com/adamcrume/robust-binary-search"
categories = ["algorithms"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = {version = "0.4.4", optional = true}
clap = "2.33.3"
friedrich = {version = "0.3.3", optional = true}
im-rc = "15.0.0"
lazy_static = {version = "1.4.0", optional = true}
libm = {version = "0.2.1", optional = true}
log = "0.4"
rand = {version = "0.8.5", optional = true}
rand_distr = {version = "0.4.3", optional = true}
rayon = {version = "1.5.1", optional = true}
regex = {version = "1.3.9", optional = true}
simplelog = "0.8.0"
pho = {optional = true, path = "../../bayesian-optimization"}

[features]
flakiness_experiment = ["rand"]
flakiness_tuner = ["rand"]
flakiness_split_tuner = ["rand"]
flakiness_split_tuner2 = ["rand"]
tuner = ["rand"]
tuner_split = ["argmin", "friedrich", "libm", "rand", "rand_distr", "rayon", "pho"]
benchmark = ["regex", "lazy_static", "rand"]

[[bin]]
name = "flakiness_experiment"
path = "src/flakiness_experiment.rs"
required-features = ["flakiness_experiment"]

[[bin]]
name = "flakiness_tuner"
path = "src/flakiness_tuner.rs"
required-features = ["flakiness_tuner"]

[[bin]]
name = "flakiness_split_tuner"
path = "src/flakiness_split_tuner.rs"
required-features = ["flakiness_split_tuner"]

[[bin]]
name = "flakiness_split_tuner2"
path = "src/flakiness_split_tuner2.rs"
required-features = ["flakiness_split_tuner2"]

[[bin]]
name = "tuner"
path = "src/tuner.rs"
required-features = ["tuner"]

[[bin]]
name = "tuner_split"
path = "src/tuner_split.rs"
required-features = ["tuner_split", "bayesian-optimization", "rand_distr"]

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"
required-features = ["benchmark"]
