# Copyright 2020 Google LLC
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     https://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "robust-git-bisect"
version = "0.1.1"
authors = ["Adam Crume <acrume@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Robust Git Bisect provides an alternative to git bisect which is robust against errors during the search."
repository = "https://github.com/adamcrume/robust-binary-search"
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robust-binary-search = "0.1.0"
clap = "2.33.3"
log = "0.4"
simplelog = "0.8.0"
union-find = "0.3.2"
